# FractalsGen

./: README.md  plot.py
qtapp/: CMakeLists.txt  colormapping.cpp  colormapping.h  display_widget.cpp  display_widget.h  exportdialog.cpp  exportdialog.h  exportdialog.ui  family00.cpp  family01.cpp  family02.cpp  family03.cpp  family04.cpp  fractal.cpp  fractals.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  renderthread.cpp  renderthread.h  resources.qrc
src/: CMakeLists.txt  doubleslider.cpp  doubleslider.h  family00.cpp  family01.cpp  family02.cpp  family03.cpp  family04.cpp  fractal.cpp  fractals.h  juliatset.cpp  juliatset.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.h  renderthread.cpp  renderthread.h  selectoutputimagesizedialog.cpp  selectoutputimagesizedialog.h  selectoutputimagesizedialog.ui
